<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_bg"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/basic_authentication_title" />

        <View
            android:background="#15ffffff"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="#2286D7F3"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="18dp"
                android:layout_marginStart="16dp"
                android:src="@mipmap/tips" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/basic_tips"
                android:textColor="#FFA524"
                android:textSize="12sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            >

            <TextView
                android:id="@+id/tv_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/fist_name"
                android:textColor="#FFFFFF"
                android:textSize="13sp"

                />

            <EditText
                android:id="@+id/et_firstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/tv_first_name"
                android:background="@null"
                android:gravity="center_vertical|end"
                android:hint="first name"
                android:maxLines="1"
                android:textColorHint="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:background="#E5E5E5" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            >

            <TextView
                android:id="@+id/tv_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/last_name"
                android:textColor="#FFFFFF"
                android:textSize="13sp"


                />

            <EditText
                android:id="@+id/et_lastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/tv_last_name"
                android:background="@null"
                android:gravity="center_vertical|end"
                android:hint="@string/last_name_hint"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="13sp" />

        </RelativeLayout>

        <View
            android:background="#88454856"
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <RelativeLayout
            android:id="@+id/rl_gender"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/gender"
                android:textColor="#FFFFFF"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/iv_gender"
                android:gravity="end"
                android:hint="@string/gender_hint"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="13sp" />


            <ImageView
                android:id="@+id/iv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@mipmap/ico_arrow" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:background="#E5E5E5" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
           >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/birthday"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="13sp"


                />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/iv_date"
                android:gravity="end"
                android:hint="@string/birthday_hint"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="13sp" />


            <ImageView
                android:id="@+id/iv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@mipmap/ico_arrow" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:background="#E5E5E5" />

        </RelativeLayout>

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/rl_nin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_aadhaar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/aadhaar_number"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="13sp"


                />

            <EditText
                android:id="@+id/et_aadhaar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/tv_aadhaar"
                android:background="@null"
                android:inputType="number"
                android:gravity="center_vertical|end"
                android:hint="@string/aadhar_number_hint"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="13sp"

                />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:background="#E5E5E5" />

        </RelativeLayout>

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/rl_bvn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/pan_card_number"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="13sp"

                />

            <EditText
                android:id="@+id/et_card"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/tv_card"
                android:background="@null"
                android:gravity="center_vertical|end"
                android:hint="@string/pan_card_number_hint"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="13sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:background="#E5E5E5" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/pin_code"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="13sp"


                />

            <EditText
                android:id="@+id/et_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/tv_code"
                android:background="@null"
                android:gravity="center_vertical|end"
                android:hint="@string/pin_code"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="13sp"

                />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:background="#E5E5E5"
                android:visibility="gone" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
           >

            <TextView
                android:id="@+id/tv_meail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/email"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="13sp"


                />

            <EditText
                android:id="@+id/et_meail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/tv_meail"
                android:background="@null"
                android:gravity="center_vertical|end"
                android:hint="xxx@xxx.com"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="13sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:background="#E5E5E5" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_purpose"
            android:layout_width="match_parent"
            android:layout_height="50dp"
          >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/loan_purpose"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_purpose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/iv_purpose"
                android:gravity="end"
                android:hint="@string/loan_purpose_hint"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="13sp" />


            <ImageView
                android:id="@+id/iv_purpose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@mipmap/ico_arrow" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:background="#E5E5E5" />

        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/bt_bg"
        android:text="Submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />


</RelativeLayout>